[package]
name = "app-250103"
version = "0.1.0"
edition = "2021"
authors = ["oxwazz <muhammad.rahmahalim@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
axum = { version = "0.8.1", default-features = false, features = ["json", "macros"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12.12", features = ["json"] }

